[package]
description = "Porkbun api wrapper for rust"
license = "MIT"
name = "pigrabbit"
version = "0.1.1"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version= "0.11.11", features=["json"]}
serde = { version= "1.0.139", features= ["derive"]}
serde_json = "1.0.82"
thiserror = "1.0.31"

[dev-dependencies]
tokio = { version = "1.20.0", features = ["full"] }

